資材をコンテナに入れた
バージョンを合わせるのが面倒なのでDockerに封じ込める

--- a/book/02_Pythonではじめる機械学習/Pandas.ipynb
+++ b/book/02_Pythonではじめる機械学習/Pandas.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "2  52.106  3.253422e+07  9.692958e+06  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,6 +734,114 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ServerID</th>\n",
+       "      <th>Sponsor</th>\n",
+       "      <th>ServerName</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Distance</th>\n",
+       "      <th>Ping</th>\n",
+       "      <th>Download</th>\n",
+       "      <th>Upload</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7510</td>\n",
+       "      <td>ASEINet</td>\n",
+       "      <td>Tokyo</td>\n",
+       "      <td>2016-12-25T06:52:15.447935</td>\n",
+       "      <td>26.445170</td>\n",
+       "      <td>37.590</td>\n",
+       "      <td>2.768103e+07</td>\n",
+       "      <td>2.527274e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6492</td>\n",
+       "      <td>denpa893</td>\n",
+       "      <td>Sumida</td>\n",
+       "      <td>2016-12-25T07:13:07.347532</td>\n",
+       "      <td>32.165972</td>\n",
+       "      <td>51.288</td>\n",
+       "      <td>2.088240e+06</td>\n",
+       "      <td>1.113094e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6492</td>\n",
+       "      <td>denpa893</td>\n",
+       "      <td>Sumida</td>\n",
+       "      <td>2016-12-25T08:19:09.015875</td>\n",
+       "      <td>32.165972</td>\n",
+       "      <td>52.106</td>\n",
+       "      <td>3.253422e+07</td>\n",
+       "      <td>9.692958e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6508</td>\n",
+       "      <td>at2wn</td>\n",
+       "      <td>Yokohama</td>\n",
+       "      <td>2016-12-25T08:31:23.478135</td>\n",
+       "      <td>0.564896</td>\n",
+       "      <td>23.114</td>\n",
+       "      <td>1.816722e+07</td>\n",
+       "      <td>8.452309e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ServerID   Sponsor ServerName                   Timestamp   Distance  \\\n",
+       "0     7510   ASEINet      Tokyo  2016-12-25T06:52:15.447935  26.445170   \n",
+       "1     6492  denpa893     Sumida  2016-12-25T07:13:07.347532  32.165972   \n",
+       "2     6492  denpa893     Sumida  2016-12-25T08:19:09.015875  32.165972   \n",
+       "3     6508     at2wn   Yokohama  2016-12-25T08:31:23.478135   0.564896   \n",
+       "\n",
+       "     Ping      Download        Upload  \n",
+       "0  37.590  2.768103e+07  2.527274e+06  \n",
+       "1  51.288  2.088240e+06  1.113094e+07  \n",
+       "2  52.106  3.253422e+07  9.692958e+06  \n",
+       "3  23.114  1.816722e+07  8.452309e+06  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.loc[:3]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -771,6 +879,245 @@
    "source": [
     "# レコードをndarrayで書き出し\n",
     "sample_dt.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 様々な処理を行う"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt = pd.read_csv(\n",
+    "    \"./extra/speedtest.csv\",\n",
+    "    names=[\"ServerID\", \"Sponsor\", \"ServerName\", \"Timestamp\", \"Distance\", \"Ping\", \"Download\", \"Upload\"]\n",
+    ")\n",
+    "dt.drop(columns=\"Timestamp\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt_dmy = pd.get_dummies(dt.loc[:,[\"ServerName\", \"Download\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Download</th>\n",
+       "      <th>ServerName_Bunkyo</th>\n",
+       "      <th>ServerName_Fussa-shi</th>\n",
+       "      <th>ServerName_Nerima</th>\n",
+       "      <th>ServerName_Sagamihara</th>\n",
+       "      <th>ServerName_Shanghai</th>\n",
+       "      <th>ServerName_Sodegaura</th>\n",
+       "      <th>ServerName_Sumida</th>\n",
+       "      <th>ServerName_Tokyo</th>\n",
+       "      <th>ServerName_Tsukuba</th>\n",
+       "      <th>ServerName_Yamato</th>\n",
+       "      <th>ServerName_Yokohama</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.768103e+07</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.088240e+06</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.253422e+07</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.816722e+07</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.196502e+07</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Download  ServerName_Bunkyo  ServerName_Fussa-shi  ServerName_Nerima  \\\n",
+       "0  2.768103e+07                  0                     0                  0   \n",
+       "1  2.088240e+06                  0                     0                  0   \n",
+       "2  3.253422e+07                  0                     0                  0   \n",
+       "3  1.816722e+07                  0                     0                  0   \n",
+       "4  2.196502e+07                  0                     0                  0   \n",
+       "\n",
+       "   ServerName_Sagamihara  ServerName_Shanghai  ServerName_Sodegaura  \\\n",
+       "0                      0                    0                     0   \n",
+       "1                      0                    0                     0   \n",
+       "2                      0                    0                     0   \n",
+       "3                      0                    0                     0   \n",
+       "4                      0                    0                     0   \n",
+       "\n",
+       "   ServerName_Sumida  ServerName_Tokyo  ServerName_Tsukuba  ServerName_Yamato  \\\n",
+       "0                  0                 1                   0                  0   \n",
+       "1                  1                 0                   0                  0   \n",
+       "2                  1                 0                   0                  0   \n",
+       "3                  0                 0                   0                  0   \n",
+       "4                  0                 1                   0                  0   \n",
+       "\n",
+       "   ServerName_Yokohama  \n",
+       "0                    0  \n",
+       "1                    0  \n",
+       "2                    0  \n",
+       "3                    1  \n",
+       "4                    0  "
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt_dmy.iloc[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name: ServerName, dtype: object)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.loc[dt.ServerName == \"Tokyo\", \"ServerName\"].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt.loc[dt.ServerName == \"Tokyo\", \"ServerName\"] = \"aa\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['aa', 'Sumida', 'Yokohama', 'Fussa-shi', 'Sagamihara', 'Sodegaura',\n",
+       "       'Nerima', 'Tsukuba', 'Yamato', 'Bunkyo', 'Shanghai'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ary, idxr = dt.ServerName.factorize()"
    ]
   }
  ],
